--- a/DailyMood/app/src/main/res/layout/mood_item.xml
+++ b/DailyMood/app/src/main/res/layout/mood_item.xml
@@ -1,45 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
     android:padding="8dp">
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@drawable/test"
-        app:cardCornerRadius="20dp">
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent">
 
-        <ImageView
-            android:id="@+id/iv_cover"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/test" />
+            android:layout_height="100dp"
+            android:background="@drawable/test"
+            app:cardCornerRadius="20dp">
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/rectangle_white_stroke"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="2018-12-22"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/iv_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/test" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:text="点击日期查看"
-            android:textSize="12sp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="bottom|center"/>
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/rectangle_white_stroke"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="2018-12-22"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text="@string/click_date"
+                android:textSize="12sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="bottom|center"/>
+
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btn_edit"
+        android:layout_width="60dp"
+        android:layout_height="100dp"
+        android:text="@string/edit"
+        android:textColor="@android:color/white"
+        android:background="@color/edit_btn_bg"/>
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="60dp"
+        android:layout_height="100dp"
+        android:text="@string/delete"
+        android:textColor="@android:color/white"
+        android:background="@color/delete_btn_bg"/>
+
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
