--- a/DailyMood/app/src/main/res/values/colors.xml
+++ b/DailyMood/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#38B0DE</color>
+    <color name="colorPrimaryDark">#38B0DE</color>
     <color name="colorAccent">#38B0DE</color>
 
     <color name="btn_blue_bg">#3299CC</color>
@@ -10,9 +10,13 @@
     <color name="btn_orange_bg">#FF7F00</color>
 
     <color name="white">#FFFFFF</color>
+
     <color name="fab_label_bg_color">#E05677fc</color>
     <color name="fab_green_bg">#00FF7F</color>
-    <color name="fab_red_bg">#FF2400</color>
     <color name="fab_orange_bg">#FF7F00</color>
+
     <color name="description_bg_color">#EEEEEE</color>
+
+    <color name="edit_btn_bg">#ecd50a</color>
+    <color name="delete_btn_bg">#FF2400</color>
 </resources>
