--- a/DailyMood/app/src/main/res/layout/mood_item.xml
+++ b/DailyMood/app/src/main/res/layout/mood_item.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:text="@string/click_date"
+                android:text="@string/item_hint"
                 android:textSize="12sp"
                 android:textColor="@android:color/white"
                 android:layout_gravity="bottom|center"/>
